# cv-analysis-system

./: .env.example  .gitignore  README.md  check_chroma_content.py  pyproject.toml  requirements.txt  tasks.py  verify_celery.py  verify_positions.py  verify_refactor.py
chatbot/: models.py  tests.py  urls.py  utils.py  views.py
chatbot/migrations/: 0001_initial.py  0002_alter_conversation_options_and_more.py  0003_conversation_anon_user_id_alter_conversation_user.py
chatbot/templates/chatbot/: chat.html
core/: celery.py  emails.py  settings.py  urls.py
data/sample_cvs/: Mohanad_Osman_Resume.docx
documents/: forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
documents/migrations/: 0001_initial.py  0002_cv_extracted_text.py  0003_remove_cv_extracted_text_certification_education_and_more.py  0004_remove_workexperience_company_and_more.py  0005_rename_institution_certification_issuer_and_more.py  0006_alter_workexperience_duration.py  0007_remove_education_cv_remove_personalinfo_cv_and_more.py  0008_alter_cv_options_cv_file_size_cv_is_processed_and_more.py  0009_cvsummary_emails.py  0010_cv_file_hash.py
documents/templates/documents/: cv_details.html  list_cvs.html  upload_cv.html
positions/: forms.py  models.py  urls.py  utils.py  views.py
positions/migrations/: 0001_initial.py  0002_application_explanation_application_matched_skills.py
rag/: agent.py  chains.py  ingestion.py  prompts.py  schemas.py  summaries.py  tools.py  vectorstore.py
rag/chains/: llm.py  match_score.py  summaries.py
tests/: test_agent.py
(+8 files in other folders)
