[project]
name = "cv-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohannad",email = "mohanados12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.9,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "celery[redis] (>=5.6.0,<6.0.0)",
    "redis (>=6.0,<6.5)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
